syntax = "proto3";

option csharp_namespace = "MeterReaderWeb.Protos";

import "enums.proto";
import "google/protobuf/timestamp.proto";
//import "google/protobuf/empty.proto";

service MeterReadingService {
	rpc AddReading(ReadingPacket) returns (StatusMessage);
	//rpc Test(google.protobuf.empty) returns (google.protobuf.empty);
}

message ReadingPacket {
	repeated ReadingMessage readings = 1;
	string notes = 2;
	ReadingStatus successful = 3;
}

message ReadingMessage {
	int32 customerId = 1;
	int32 readingValue = 2;
	google.protobuf.Timestamp readingTime = 5;
	reserved 3;
	reserved "successful";
}


message StatusMessage {
	string message = 1;
	ReadingStatus success = 2;
}